packages/nci-engine/tests/snapshots/snapshot_tests__rust_typeof-import-type-query.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "typeof-import-type-query",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "typeof-import-type-query@1.0.0::index.d.ts::NS",
      "name": "NS",
      "kind": 268,
      "kindName": "ModuleDeclaration",
      "package": "typeof-import-type-query",
      "filePath": "index.d.ts",
      "signature": "declare namespace NS {\n  var box: typeof import(\"./dep\").RemoteCls;\n}",
      "jsDoc": "Edge case: non-exported `declare namespace` in an external module (undici-style)\nwith `var` members typed as `typeof import(\"./dep\").Name` — must merge nested type\nrefs into the namespace dependencies like TS `extractTypeReferences` on the subtree.",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "typeof-import-type-query@1.0.0::dep.d.ts::RemoteCls"
      ],
      "isInternal": true,
      "modifiers": [
        "declare"
      ]
    },
    {
      "id": "typeof-import-type-query@1.0.0::index.d.ts::NS.box",
      "name": "NS.box",
      "parentSymbolId": "typeof-import-type-query@1.0.0::index.d.ts::NS",
      "enclosingModuleDeclarationId": "typeof-import-type-query@1.0.0::index.d.ts::NS",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "typeof-import-type-query",
      "filePath": "index.d.ts",
      "signature": "declare const box: typeof import(\"./dep\").RemoteCls",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "typeof-import-type-query@1.0.0::dep.d.ts::RemoteCls"
      ],
      "isInternal": true
    },
    {
      "id": "typeof-import-type-query@1.0.0::index.d.ts::NS.box.ping",
      "name": "NS.box.ping",
      "parentSymbolId": "typeof-import-type-query@1.0.0::index.d.ts::NS.box",
      "enclosingModuleDeclarationId": "typeof-import-type-query@1.0.0::index.d.ts::NS",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "typeof-import-type-query",
      "filePath": "index.d.ts",
      "signature": "ping(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "typeof-import-type-query@1.0.0::dep.d.ts::RemoteCls",
      "name": "RemoteCls",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "typeof-import-type-query",
      "filePath": "dep.d.ts",
      "signature": "export declare class RemoteCls {\n  ping(): void;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "typeof-import-type-query@1.0.0::dep.d.ts::RemoteCls.prototype.ping",
      "name": "RemoteCls.prototype.ping",
      "parentSymbolId": "typeof-import-type-query@1.0.0::dep.d.ts::RemoteCls",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "typeof-import-type-query",
      "filePath": "dep.d.ts",
      "signature": "ping(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "typeof-import-type-query@1.0.0::box",
      "name": "box",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "typeof-import-type-query",
      "filePath": "index.d.ts",
      "signature": "declare const box: typeof import(\"./dep\").RemoteCls",
      "jsDoc": "Same `typeof import()` pattern as a package export (complements `NS.box`).",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "typeof-import-type-query@1.0.0::dep.d.ts::RemoteCls"
      ],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "typeof-import-type-query@1.0.0::box.ping",
      "name": "box.ping",
      "parentSymbolId": "typeof-import-type-query@1.0.0::box",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "typeof-import-type-query",
      "filePath": "dep.d.ts",
      "signature": "ping(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "typeof-import-type-query@1.0.0::index.d.ts::box.ping",
      "name": "box.ping",
      "parentSymbolId": "typeof-import-type-query@1.0.0::box",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "typeof-import-type-query",
      "filePath": "index.d.ts",
      "signature": "ping(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true
    }
  ],
  "totalSymbols": 8,
  "totalFiles": 2,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
