packages/nci-engine/tests/snapshots/snapshot_tests__rust_types-field-implementation-js.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "types-field-implementation-js",
  "version": "1.0.0",
  "symbols": [],
  "totalSymbols": 0,
  "totalFiles": 0,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
