packages/nci-engine/tests/snapshots/snapshot_tests__rust_types-field-js-adjacent-dts.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "types-field-js-adjacent-dts",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "types-field-js-adjacent-dts@1.0.0::cacheableStatus",
      "name": "cacheableStatus",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "types-field-js-adjacent-dts",
      "filePath": "index.d.ts",
      "sourcePackageName": "types-field-js-adjacent-dts",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "declare const cacheableStatus: ReadonlySet<number>",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    }
  ],
  "totalSymbols": 1,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
